--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,18 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
+
+    <meta
+      property="og:description"
+      content="Next Shop is a merchant-first e-commerce web app."
+    />
+    <meta property="og:title" content="Next Shop" />
+    <meta
+      property="og:image"
+      content="https://firebasestorage.googleapis.com/v0/b/next-shop-59dce.appspot.com/o/Statics%2FBrand-Black.jpg?alt=media&token=44d478db-1362-491b-86e4-749ee5d4ffa1"
+    />
+    <meta property="og:url" content="http://localhost:5001" />
+    <meta property="og:locale" content="en_IN" />
   </head>
   <body class="mat-typography">
     <app-root></app-root>
